# RecSysChallenge2022

./: .env  .gitignore  README.md  pyproject.toml
src/: constant.py  data_reader.py  evaluation.py  gcn_first_try.py  recommender_interface.py  xgboost_dataset.py  xgboost_reranker.py
src/datasets/: dataset.py
src/models/: itemknn.py
src/models/cassandra/: cassandra.py  session_embedding_modules.py  submission_cassandra.py  train_cassandra.py
src/models/cb_iknn/: cb_iknn.py
src/models/content_ease/: content_ease.py
src/models/ease/: ease.py  sweep_ease.yaml  train_ease.py
src/models/hybrid_item_sim/: hybrid_item_sim.py
src/models/itemknn/: itemknn.py  sweep_itemknn.yaml  train_itemknn.py
src/models/noname/: noname.py  train_noname.py
src/models/psge/: psge.py
src/models/rp3b/: rp3b.py
src/models/taigcn/: lightning_taigcn.py  taigcn.py  train_lightning_taigcn.py  train_taigcn.py
src/notebooks/: 11_04_data_exploration.ipynb  12_04_itemknn.ipynb  12_04_itemknn_sub.ipynb  13_04_ease.ipynb  13_04_item_features.ipynb  13_04_psge.ipynb  14_03_content_based.ipynb  14_04_graph.ipynb  14_06_rp3b.ipynb  15_03_hybrid_itemsim.ipynb  21_04_cease.ipynb  xgboost_predictions.ipynb
src/utils/: decorator.py  general.py  good_luck.py  logger.py  pandas_utils.py  sparse_matrix.py
src/utils/pytorch/: datasets.py  losses.py
