[tool.poetry]
name = "RecSysChallenge2022"
version = "0.1.0"
description = "Recsys challenge 2022"
authors = ["Edoardo <damicoedoardo95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
black = "^22.3.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
pyarrow = "^7.0.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
torch = "^1.11.0"
python-dotenv = "^0.20.0"
tqdm = "^4.64.0"
Cython = "^0.29.28"
similaripy = "^0.1.2"
pathos = "^0.2.8"
p-tqdm = "^1.3.3"
wandb = "^0.12.14"
networkx = "^2.8"
xgboost = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
